Add insurer autocomplete (Top 30) to contracts module

--- a/contracts_index.html
+++ b/contracts_index.html
@@ -1,3 +1,4 @@
+
 <!doctype html><html lang="de"><head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="../../styles/main.css">
@@ -6,7 +7,7 @@
   <h2>Verträge & Sparten</h2>
   <div class="row">
     <div class="col"><label>Versicherer</label>
-      <input list="versichererList" id="versicherer" placeholder="z. B. Allianz">
+      <input list="versichererList" id="versicherer">
       <datalist id="versichererList">
         <option value="Allianz">
         <option value="R+V Versicherung">
